update terminal commands